# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\API\AuthController;
 use App\Http\Controllers\API\ContactController;
+use App\Http\Controllers\API\FacilityController;
 use App\Http\Controllers\TestController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -24,6 +25,14 @@ Route::prefix('v1')->group(function () {
             Route::post('/store', [ContactController::class, 'store']);
             Route::post('/show/{id}', [ContactController::class, 'show']);
             Route::post('/delete/{id}', [ContactController::class, 'delete']);
+        });
+
+        Route::prefix('/facility')->group(function () {
+            Route::post('/view', [FacilityController::class, 'view']);
+            Route::post('/store', [FacilityController::class, 'store']);
+            Route::post('/show/{id}', [FacilityController::class, 'show']);
+            Route::post('/update/{id}', [FacilityController::class, 'update']);
+            Route::post('/delete/{id}', [FacilityController::class, 'delete']);
         });
     });
 });
