# storage/api-docs/api-docs.json
@@ -87,7 +87,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "success!"
+                        "description": "successfully!"
                     },
                     "500": {
                         "description": "internal server error!"
@@ -104,8 +104,9 @@
                 "description": "Contact Store",
                 "operationId": "Contact Store",
                 "requestBody": {
+                    "required": true,
                     "content": {
-                        "application/json": {
+                        "multipart/form-data": {
                             "schema": {
                                 "schema": "Contact",
                                 "title": "store",
@@ -130,22 +131,14 @@
                                         "type": "string"
                                     }
                                 },
-                                "type": "object",
-                                "example": {
-                                    "name": "Dzikri Faza",
-                                    "email": "dzikri.faza@mailinator.com",
-                                    "phone": "089606265960",
-                                    "date": "2024-06-06",
-                                    "time": "10:00",
-                                    "message": "Lorem ipsum dolor sit amet."
-                                }
+                                "type": "object"
                             }
                         }
                     }
                 },
                 "responses": {
                     "201": {
-                        "description": "created successfully!"
+                        "description": "created!"
                     },
                     "422": {
                         "description": "body validation!"
@@ -177,7 +170,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "data successfully!"
+                        "description": "successfully!"
                     },
                     "404": {
                         "description": "not found!"
@@ -206,7 +199,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "data successfully!"
+                        "description": "deleted!"
                     },
                     "404": {
                         "description": "not found!"
@@ -217,17 +210,90 @@
                 }
             }
         },
-        "/test": {
+        "/facility/view": {
             "post": {
                 "tags": [
-                    "Test"
+                    "Facility"
                 ],
-                "summary": "Test",
-                "description": "TestAPI",
-                "operationId": "test",
+                "summary": "Facility View",
+                "description": "Facility View",
+                "operationId": "Facility View",
+                "parameters": [
+                    {
+                        "name": "search",
+                        "in": "query",
+                        "description": "Search (by name or email)",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "Ok"
+                        "description": "successfully!"
+                    },
+                    "500": {
+                        "description": "internal server error!"
+                    }
+                }
+            }
+        },
+        "/facility/store": {
+            "post": {
+                "tags": [
+                    "Facility"
+                ],
+                "summary": "Facility Store",
+                "description": "Facility Store",
+                "operationId": "Facility Store",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "schema": "Facility",
+                                "title": "store",
+                                "properties": {
+                                    "title": {
+                                        "type": "string"
+                                    },
+                                    "description": {
+                                        "type": "string"
+                                    },
+                                    "features[]": {
+                                        "type": "array",
+                                        "items": {
+                                            "properties": {
+                                                "icon": {
+                                                    "type": "string"
+                                                },
+                                                "name": {
+                                                    "type": "string"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "image": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "created!"
+                    },
+                    "422": {
+                        "description": "body validation!"
+                    },
+                    "500": {
+                        "description": "internal server error!"
                     }
                 }
             }
